# CS457

Homeowork1/: Excell.hs  main.hs
Homework1/: CSV.hs
Homework2/: main.hs  test.cabal  test.hs
Homework3/: main.hs  test.cabal  test.hs
Homework4/: Colour.hi  Colour.hs  Music.hs  PPM6.hs  main.hs  picture.ppm  suggest.hs  test.cabal  test.hi  test.hs  tim.ppm
Homework4/Music/: wat.mid
Homework4/New folder/: allred.ppm  circleAxis.ppm
Homework4/Pics/: thihng.ppm
Homework5/: main.hs  test.cabal
Homework6/: main.hs
Lecture10/: Sample Mid-term questions.hs  lect10.hs
Lecture12/: thing.hs
Lecture2/: Lecture2.sublime-workspace  main.hi  main.hs  tags  test.cabal
Lecture3/: func.hs  lists.hs  main.hs  test.cabal  thing.hs
Lecture4/: main.hs  test.cabal
Lecture5/: DemoPPM.hi  DemoPPM.hs  PPM6.hi  cubicFun.ppm  main.hs  quadFun.ppm
Lecture5/Pics/: TimFrac.ppm  TimFrac2.ppm  TimFrac3.ppm  allred.ppm  check.ppm  circleAxis.ppm  circlePlain.ppm  circleStuff.ppm  exponential.ppm  graph.ppm
Lecture6/: Music.hs  MusicNotes.hs  main.hs
Lecture6/Music/: cScale.mid  row.mid
Lecture7/: test.cabal
Lecture8/: main.hs  suggest.txt
Lecture9/: main.hs  test.cabal
Test/: main.hs  test.cabal
project/: Conway’s Game of Life.pptx  gol.cabal  main.hs  proj.sublime-workspace  test.hs
